--- a/main.css
+++ b/main.css
@@ -552,11 +552,15 @@ RICH IMAGE FIX
     {
       color: white;
     }
-*/
+*//*
     .nav-link.w-inline-block.current-page-item:before {
       border-bottom: solid 2px #9b2557;
       }
-    
+    */
+      .nav-link.w-inline-block a, .current-page-item:before {
+        border-bottom: solid 2px #9b2557;
+        }
+      
     
 /*
 ================================================================================
