--- a/main.css
+++ b/main.css
@@ -557,7 +557,8 @@ RICH IMAGE FIX
       border-bottom: solid 2px #9b2557;
       }
     */
-      .underline.menu-item.menu-item-type-post_type.menu-item-object-page.current-menu-item.page_item.page-item-10.current_page_item.menu-item-24:before {
+      .current-menu-item:before {
+        margin-top: 20px;
         border-bottom: solid 4px #9b2557;
         }
       
