--- a/main.css
+++ b/main.css
@@ -565,6 +565,7 @@ WP CURRENT MENU
 */
 
       .current-menu-item:before {
+        content: "";
         border-bottom: solid 3px #9b2557;
         position: absolute;
         left: -1.25em;
