--- a/main.css
+++ b/main.css
@@ -560,7 +560,7 @@ RICH IMAGE FIX
 
     /*
 ================================================================================
-WP CURRENT MENU
+WP CURRENT MENU NE RRRRAAAADDDIII
 ================================================================================
 */
 
