--- a/main.css
+++ b/main.css
@@ -307,10 +307,11 @@ NTH CHILDS
 .child:nth-last-child(1) .newname {
   border-bottom: 3px solid #9b2557;
 }
-
+/*
 .newswrap:nth-last-child(-n+3) {
   border-bottom: 3px solid #9b2557;
 }
+*/
 .claniceminigrid:nth-last-child(-n+3) {
   border-bottom: 3px solid #9b2557;  
 }
@@ -592,12 +593,12 @@ MEDIA QUERY
    /* height: 18vh;*/
   }
 
-
+/*
   .newswrapfix:nth-last-child(-n+1) .newsminigrid {
     border-bottom: 3px solid #9b2557;
   }
 
-
+*/
 /* RICH TEXT FOTKA CENTAR*/
   .w-richtext figure.w-richtext-align-floatleft {
     width: 100%;
