--- a/main.css
+++ b/main.css
@@ -313,11 +313,12 @@ NTH CHILDS
 .child:nth-last-child(1) .newname {
   border-bottom: 3px solid #9b2557;
 }
-/*
+
+/* NEWS BOX HOMEPAGE I ?*/
 .newswrap:nth-last-child(-n+3) {
   border-bottom: 3px solid #9b2557;
 }
-*/
+
 .claniceminigrid:nth-last-child(-n+3) {
   border-bottom: 3px solid #9b2557;  
 }
