--- a/main.css
+++ b/main.css
@@ -289,7 +289,7 @@ IMAGE BLEND MODE
 }
 
 
-.card__image {
+.card__image, .image-2 {
     filter: grayscale(100%);
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
