--- a/main.css
+++ b/main.css
@@ -62,7 +62,15 @@ body {
 
 */
 
+/*
+================================================================================
+TRANSFORM ALL TO LOWERCASE
+================================================================================
+*/
 
+h1 {
+  text-transform: lowercase;
+}
 
 
 /*
