--- a/main.css
+++ b/main.css
@@ -187,7 +187,7 @@ CURRENT
 	color: white;
 }
 */
-.nav-link.w-inline-block.w--current{
+.nav-link.w-inline-block.current-page-item {
 	color: white;
 }
 
