--- a/main.css
+++ b/main.css
@@ -180,7 +180,7 @@ CURRENT
 	color: white;
 }
 
-
+/*
 .nav-link a,
 .current-page-item
  {
@@ -191,7 +191,7 @@ CURRENT
 	color: white;
 }
 
-
+*/
 
 /*
 .nav-link.w-inline-block.w--current:before {
