--- a/main.css
+++ b/main.css
@@ -174,12 +174,12 @@ CURRENT
 ================================================================================
 */
 
-
+/*
 .nav-link,
 .current-menu-ancestor {
 	color: white;
 }
-
+*/
 /*
 .nav-link a,
 .current-page-item
