--- a/main.css
+++ b/main.css
@@ -175,13 +175,13 @@ CURRENT
 */
 
 
-.nav-link,
+.underline,
 .current-menu-ancestor {
 	color: white;
 }
 
 
-
+.underline,
 .current-page-item
  {
 	color: rgb(24, 199, 76);
