--- a/main.css
+++ b/main.css
@@ -175,7 +175,18 @@ CURRENT
 */
 
 
+.active:before {
+  content: "";
+border-bottom: solid 3px #9b2557;
+position: absolute;
+left: -1.25em;
+width: 1em;
+ 
+}
 
+
+
+/*
 .current-menu-ancestor {
 	color: white;
 }
