--- a/main.css
+++ b/main.css
@@ -232,6 +232,9 @@ margin-left: 1.25em;
  
 }
 */
+
+h1:before {display:none !important;}
+
 /*
 ================================================================================
 TXT SELECT
