--- a/main.css
+++ b/main.css
@@ -1191,7 +1191,7 @@ VARIOUS FIXES
 ================================================================================
 */
 
-.mobile-li:nth-last-child(1) {
+.mobile-li:nth-last-child(1), .doc-module:nth-last-child(1) {
   margin-bottom:0; 
  }
 
