--- a/main.css
+++ b/main.css
@@ -1115,7 +1115,6 @@ COOKIE SKIN
   /* font-family: sans-serif; */
    font-size: 1vw; 
   /* line-height: 1; */
-  
 }
 
 .ch2-style-light .ch2-dialog {
@@ -1215,7 +1214,11 @@ width: 1em;
 
 /* DOCUMENT EXTENSION FIX POVIŠE 1600*/
 
+
+@media (max-width: 1600px) {
+
 .extension {
   bottom: 0.4em;
 }
 
+}
