--- a/main.css
+++ b/main.css
@@ -1165,6 +1165,7 @@ color: #f5f4f1 !important;
 
 .ch2-container, .ch2-icon {
   font-size: 1vw  !important;
+  line-height: 1.3!important;
 }
 .ch2-theme-bar .ch2-dialog-actions button {
     min-width: auto !important;
@@ -1186,7 +1187,12 @@ color: #f5f4f1 !important;
   margin-right: -0.95em!important;
 }
 
-
+.ch2-container, .ch2-icon {
+  font-family: sans-serif;
+  font-size: 14px;
+  line-height: 1.3;
+  text-transform: none;
+}
 
 /*
 ================================================================================
