--- a/main.css
+++ b/main.css
@@ -1218,6 +1218,11 @@ width: 1em;
 }
 
 
+/* ICON TEXT - DOC EXTENSION */
+.extension {
+  font-size: 1.0em;
+}
+
 
 /* DOCUMENT EXTENSION FIX POVIŠE 1600*/
 
