--- a/main.css
+++ b/main.css
@@ -599,7 +599,7 @@ img.alignleft {
     float: left;
   margin-right: 1.5em;
   position: absolute;
-  right: 50%;
+  right: 25em;
   max-width: 25em;
 }
 
