--- a/main.css
+++ b/main.css
@@ -616,9 +616,9 @@ bottom: 0;
   max-height: 45em;
 }
 
-.aligncenter {
+.aligncenter, .alignright  {
   float: none;
-  margin: 1em auto 1em;
+  margin: 1.5em auto 1.5em;
 }
 
 
