--- a/main.css
+++ b/main.css
@@ -105,7 +105,7 @@ html {
 ANIMATE ON RESIZE
 ================================================================================
 */
-  /*
+ 
   section, h1, h2, h3, p, li {
     -moz-transition: width 1s ease-in-out, left 1.5s ease-in-out;
     -webkit-transition: width 1s ease-in-out, left 1.5s ease-in-out;
@@ -114,7 +114,7 @@ ANIMATE ON RESIZE
     transition: width 1s ease-in-out, left 1.5s ease-in-out;
 }
 
-*/
+
 
 /*
 ================================================================================
@@ -1155,7 +1155,18 @@ TEXT SINGLE PAGE
 .swiper-button-p:focus { 
 outline: none; }
   
+/*
+================================================================================
+SWIPER KILL NAV IF NO SLIDES
+================================================================================
+*/
 
+.swiper-wrapper.disabled {
+  transform: translate3d(0px, 0, 0) !important;
+}
+.swiper-pagination.disabled {
+  display: none;
+}
 /*
 ================================================================================
 COOKIE SKIN
