--- a/main.css
+++ b/main.css
@@ -521,16 +521,16 @@ outline: none;
 
 
 .search-submit{
-  background-color: #00000000;
   height: 1.3em;
   padding-right: .5em;
-  border-style: solid;
+  /*border-style: solid;
   border-width: 0 0 3px;
-  border-color: #000 #000 #f5f4f1;
+  border-color: #000 #000 #f5f4f1;*/
   background-color: transparent;
-  font-size: 7.75em;
   line-height: 1;
   letter-spacing: -.024em;
+  cursor: pointer;
+ 
 }
 
 .image {
