--- a/main.css
+++ b/main.css
@@ -521,9 +521,10 @@ outline: none;
 
 
 .search-submit{
-  height: 1.3em;
-  padding-right: .5em;
-  /*border-style: solid;
+  width: 3em;
+  height: 3em;
+  /*padding-right: .5em;
+  border-style: solid;
   border-width: 0 0 3px;
   border-color: #000 #000 #f5f4f1;*/
   background-color: transparent;
