--- a/main.css
+++ b/main.css
@@ -523,7 +523,7 @@ outline: none;
 .search-submit{
   width: 6em;
   height: 6em;
-
+z-index: 10;
   background-color: transparent;
   line-height: 1;
   letter-spacing: -.024em;
@@ -536,19 +536,21 @@ input[type="submit" i] {
   color: -internal-light-dark(black, white);
   background-color: -internal-light-dark(rgb(239, 239, 239), rgb(59, 59, 59));
   border-style: none!important;
-border-color: transparent;  
+  border-color: transparent;  
 }
 
 /*SEARCH BUTTON POSITION*/
 .div-block-2 {
-  top: 1.3em;
-  right: -2.8em;
+  width: 3em;
+  height: 3em;
+ 
 }
 
 
 .image {
 position: absolute;
 user-select: none;
+
 }
 
 /* SEARCH INPUT TEXT COLOR */ 
