--- a/main.css
+++ b/main.css
@@ -372,11 +372,11 @@ NTH CHILDS
   border-bottom: 3px solid #9b2557;  
 }
 
-.search-grid-auto:nth-child(1) .newname {
+.searchcontentwrap:nth-child(1) .newname {
   border-top: 3px solid #9b2557;
 }
 
-.search-grid-auto:nth-last-child(1) .newname {
+.searchcontentwrap:nth-last-child(1) .newname {
   border-bottom: 3px solid #9b2557;
 }
 
