--- a/main.css
+++ b/main.css
@@ -380,7 +380,12 @@ NTH CHILDS
   border-bottom: 3px solid #9b2557;
 }
 
+ul {
 
+    list-style-type: none;
+
+
+}
 
 /*
 ================================================================================
