--- a/main.css
+++ b/main.css
@@ -1439,6 +1439,7 @@ width: 1em;
   margin-left: -0.06em;
 }
 
+/* SEARCH RESULTS MARGIN LEFT FIX */
 .list911 {
   list-style-type: none;
   margin-left: -2.8em;
