--- a/main.css
+++ b/main.css
@@ -1440,7 +1440,7 @@ width: 1em;
 }
 
 /* SEARCH RESULTS MARGIN LEFT FIX */
-.list911 {
+.searchresultswrap {
   list-style-type: none;
   margin-left: -2.8em;
 }
