--- a/main.css
+++ b/main.css
@@ -1417,17 +1417,11 @@ width: 1em;
   margin-top: 9.9em;
 }
 
+/*DOCUMET EXTENSION*/
+.extension {
+  bottom: 0.85em; 
+} 
 
-/* DOCUMENT EXTENSION FIX POVIŠE 1600*/
-
-
-@media (min-width: 1500px) {
-
-/* .extension {
-   bottom: 0.7em; 
-} */
-
-}
 
 /* DATUM NOVOSTI */
 .home-sub {
