--- a/main.css
+++ b/main.css
@@ -1438,3 +1438,8 @@ width: 1em;
   list-style-type: none;
   margin-left: -2.8em;
 }
+
+.searchcontentwrap .search-excerpt {
+ background-color: #FFFF00;
+
+}
