--- a/main.css
+++ b/main.css
@@ -1439,7 +1439,9 @@ width: 1em;
   margin-left: -2.8em;
 }
 
+/* SEARCH RESULTS HIGHLIGHT */
 .searchcontentwrap .search-excerpt {
- background-color: #FFFF00;
+ background-color: #9b2557;
+ color:#f5f4f1
 
 }
