--- a/main.css
+++ b/main.css
@@ -1443,6 +1443,6 @@ width: 1em;
 .searchcontentwrap .search-excerpt {
  background-color: #9b2557;
  color:#f5f4f1;
- padding: 0.3em 0.4em 0.2em;
+ padding: 0.3em 0.3rem 0.2em;
  
 }
