--- a/main.css
+++ b/main.css
@@ -1446,3 +1446,8 @@ width: 1em;
  padding: 0.3em 0.3rem 0.2em;
  
 }
+
+/*REDNI BROJ BOTTOM RAZMAK SEARCH RESILTS*/
+.searchredni.bottom {
+  margin-bottom: 1.3em;
+}
