--- a/main.css
+++ b/main.css
@@ -382,13 +382,14 @@ NTH CHILDS
   border-bottom: 3px solid #9b2557;
 }
 
+/*
 ul {
 
     list-style-type: none;
 
 
 }
-
+*/
 /*
 ================================================================================
 HOME TAB BEFORE
