--- a/main.css
+++ b/main.css
@@ -689,7 +689,7 @@ RICH IMAGE FIX
 top: 0!important;
 right: 0!important;
 bottom: 0!important;
-/*margin: 0 1em 1em 0;*/
+margin: 0 1em 1em 0!important;
   max-width: 25em!important;
   max-height: 45em!important;
 }
