--- a/main.css
+++ b/main.css
@@ -3,16 +3,16 @@
 SCROLLBAR FIX
 ================================================================================
 */
-
+/*
 body,
 html {
   
   margin: 0;
   padding: 0;
-  /*overflow-x: hidden; */
+  /*overflow-x: hidden; 
 }
 
-
+*/
 
 /*
 ================================================================================
@@ -20,11 +20,6 @@ html {
 ================================================================================
 */
 
-.mobilemenu {
-  height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
-  height: calc(var(--vh, 1vh) * 100);
-  margin: 0 auto;
-}
 
 /*
 ================================================================================
