--- a/main.css
+++ b/main.css
@@ -20,6 +20,11 @@ html {
 ================================================================================
 */
 
+.mobilemenu {
+  height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
+  margin: 0 auto;
+}
 
 /*
 ================================================================================
