--- a/main.css
+++ b/main.css
@@ -382,14 +382,11 @@ NTH CHILDS
   border-bottom: 3px solid #9b2557;
 }
 
-/*
-ul {
 
-    list-style-type: none;
-
-
+.searchresultswrap ul {
+  list-style-type: none;
 }
-*/
+
 /*
 ================================================================================
 HOME TAB BEFORE
