--- a/main.css
+++ b/main.css
@@ -364,54 +364,6 @@ NTH CHILDS
   border-bottom: 3px solid #9b2557;
 }
 
-
-
-
-/*
-================================================================================
-HOME TAB BEFORE
-================================================================================
-*/
-
-
-
-
- 
-
-  /*
-  .doc-grid-item:nth-of-type(1) {
-    border-top: 3px solid #9b2557;
-    
-  }
-  
-  .doc-grid-item:nth-last-of-type(1) {
-    border-bottom: 3px solid #9b2557;
-    
-  }
-  
-  .docsolowrap:nth-last-of-type(n+1) {
-    border-bottom: 3px solid #9b2557;
-    
-  }
-
-  .projectsolowrapfix:nth-last-of-type(-n+2) {
-    border-bottom: 3px solid #9b2557;
-   }
-  
-  .projectsolowrapfix:nth-of-type(1) {
-    border-top: 3px solid #9b2557;
-   }
-
-   .contactwrap:nth-last-child(-n+2) {
-    border-bottom: 3px solid #9b2557;
-    padding-bottom: 3rem;
-  }
-
-  .searchcontentwrap:nth-last-child(1) {
-    border-bottom: 3px solid #9b2557;
-    
-  }
-  
   
 /*
 ================================================================================
@@ -715,6 +667,15 @@ MEDIA QUERY
 
 @media (max-width: 699px) {
 
+  .child:nth-child(1) .newname, .search-grid-auto:nth-child(1) {
+    border-top: 2px solid #9b2557;
+  }
+  
+  .child:nth-last-child(1) .newname, .newswrap:nth-last-child(-n+3), .claniceminigrid:nth-last-child(-n+3),
+  .claniceminigrid:nth-last-child(-n+3), .contactwrap:nth-last-child(-n+4), .search-grid-auto:nth-last-child(1)  {
+    border-bottom: 2px solid #9b2557;
+  }
+
 
   .verticalx{
     width: calc(7em*21/29.7);
@@ -747,38 +708,6 @@ MEDIA QUERY
 
 
 
-
-
-
-  /*
-  .contactwrap, .footersponzorwrap  {
-    border-top: 2px solid #9b2557;
-}
-  .child:nth-child(1) .newname {
-    border-top: 2px solid #9b2557;
-  }
-  
-  .child:nth-last-child(1) .newname {
-    border-bottom: 2px solid #9b2557;
-  }
-  
-  .newswrap:nth-last-child(-n+3) {
-    border-bottom: 2px solid #9b2557;
-  }
-  
-  .claniceminigrid:nth-last-child(-n+3) {
-    border-bottom: 2px solid #9b2557;  
-  }
-*/
-
-  /*
-  .claniceminigrid, .newsminigrid {
-    border-top: 2px solid #9b2557;  
-  }
-  */
-
-
-
 /*
 PROVJERI OVO NAKNADNO JE UGAŠENO PA MOŽDA NEŠTO RADI
   .nav-link.w-inline-block.w--current:before {
@@ -790,15 +719,8 @@ PROVJERI OVO NAKNADNO JE UGAŠENO PA MOŽDA NEŠTO RADI
   */
 
 
-  /*
-  .child2:nth-child(1) .newname {
-    border-top: 2px solid #9b2557;
-  }
-  .child2:nth-last-child(1) .newname {
-    border-bottom: 2px solid #9b2557;
-  }
 
-*/
+
   .swiper-pagination {
     display: none!important;
 }
@@ -819,6 +741,16 @@ PROVJERI OVO NAKNADNO JE UGAŠENO PA MOŽDA NEŠTO RADI
  
 @media (min-width: 700px) and (max-width:999px) {
 
+
+  .child:nth-child(1) .newname, .search-grid-auto:nth-child(1) {
+    border-top: 2px solid #9b2557;
+  }
+  
+  .child:nth-last-child(1) .newname, .newswrap:nth-last-child(-n+3), .claniceminigrid:nth-last-child(-n+3),
+  .claniceminigrid:nth-last-child(-n+3), .contactwrap:nth-last-child(-n+4), .search-grid-auto:nth-last-child(1)  {
+    border-bottom: 2px solid #9b2557;
+  }
+
 /* RICH TEXT FOTKA CENTAR*/
 .w-richtext figure.w-richtext-align-floatleft {
   width: 100%;
@@ -833,36 +765,6 @@ PROVJERI OVO NAKNADNO JE UGAŠENO PA MOŽDA NEŠTO RADI
 
 
 
-
-
-
-/*
-  .contactwrap, .footersponzorwrap {
-    border-top: 2px solid #9b2557;
-}
-
-  .child:nth-child(1) .newname {
-    border-top: 2px solid #9b2557;
-  }
-  
-  .child:nth-last-child(1) .newname {
-    border-bottom: 2px solid #9b2557;
-  }
-  
-  .newswrap:nth-last-child(-n+3) {
-    border-bottom: 2px solid #9b2557;
-  }
-  
-  .claniceminigrid:nth-last-child(-n+3) {
-    border-bottom: 2px solid #9b2557;  
-  }
-
-/*
-  .claniceminigrid, .newsminigrid {
-    border-top: 2px solid #9b2557;  
-  }*/
-
-
 /*
 OVO JE UGAŠENO 
   .nav-link.w-inline-block.w--current:before, .underline::before {
@@ -875,15 +777,6 @@ OVO JE UGAŠENO
     height: 2px;
   }
 
-  /*
-  .child2:nth-child(1) .newname {
-    border-top: 2px solid #9b2557;
-  }
-  .child2:nth-last-child(1) .newname {
-    border-bottom: 2px solid #9b2557;
-  }
-   
-  */
   .swiper-pagination {
     display: none!important;
 }
@@ -891,6 +784,15 @@ OVO JE UGAŠENO
 
 }
   @media (min-width: 1000px) and (max-width:1199px) {
+
+    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1) {
+      border-top: 3px solid #9b2557;
+    }
+    
+    .child:nth-last-child(1) .newname, .newswrap:nth-last-child(-n+3), .claniceminigrid:nth-last-child(-n+3),
+    .claniceminigrid:nth-last-child(-n+3), .contactwrap:nth-last-child(-n+4), .search-grid-auto:nth-last-child(1)  {
+      border-bottom: 3px solid #9b2557;
+    }
 
 
     /* RICH TEXT FOTKA CENTAR*/
@@ -906,89 +808,23 @@ OVO JE UGAŠENO
 
 
 
-
-    /*
-  .contactwrap, .footersponzorwrap  {
-    border-top: 3px solid #9b2557;
-}
-  .child:nth-child(1) .newname {
-    border-top: 3px solid #9b2557;
-  }
-  
-  .child:nth-last-child(1) .newname {
-    border-bottom: 3px solid #9b2557;
-  }
-  
-  .newswrap:nth-last-child(-n+3) {
-    border-bottom: 3px solid #9b2557;
-  }
-  
-  .claniceminigrid:nth-last-child(-n+3) {
-    border-bottom: 3px solid #9b2557;  
-  }
-
-
-
-  /*
-  .claniceminigrid, .newsminigrid {
-    border-top: 3px solid #9b2557;  
-  }
-  */
-
-
-/*
-  .nav-link.w-inline-block.w--current:before, .underline::before {
-    border-bottom: solid 3px #9b2557;
-  }
-  */
   .swiper-pagination-bullet {
     height: 3px;
   }
 
-  /*
-  .child2:nth-child(1) .newname {
-    border-top: 3px solid #9b2557;
-  }
-  .child2:nth-last-child(1) .newname {
-    border-bottom: 3px solid #9b2557;
-  }
-
-*/
+  
 
 }
   @media (min-width: 1200px) and (max-width:1599px) {
 
-
-
-    /*
-    .contactwrap, .footersponzorwrap  {
-      border-top: 3px solid #9b2557;
-  }
-    .child:nth-child(1) .newname {
+    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1) {
       border-top: 3px solid #9b2557;
     }
     
-    .child:nth-last-child(1) .newname {
+    .child:nth-last-child(1) .newname, .newswrap:nth-last-child(-n+3), .claniceminigrid:nth-last-child(-n+3),
+    .claniceminigrid:nth-last-child(-n+3), .contactwrap:nth-last-child(-n+4), .search-grid-auto:nth-last-child(1)  {
       border-bottom: 3px solid #9b2557;
     }
-    
-    .newswrap:nth-last-child(-n+3) {
-      border-bottom: 3px solid #9b2557;
-    }
-    
-    .claniceminigrid:nth-last-child(-n+3) {
-      border-bottom: 3px solid #9b2557;  
-    }
-
-
-
-
-    /*
-    .claniceminigrid, .newsminigrid {
-      border-top: 3px solid #9b2557;  
-    }
-*/
-
 
 /*
     .nav-link.w-inline-block.w--current:before, .underline::before {
@@ -1001,53 +837,20 @@ OVO JE UGAŠENO
 
 
 
-    /* OVO JR UGAŠENO */
-    /*
-    .child2:nth-child(1) .newname {
-      border-top: 3px solid #9b2557;
-    }
-    .child2:nth-last-child(1) .newname {
-      border-bottom: 3px solid #9b2557;
-    }
-*/
 
   }
 
  
   @media (min-width: 1600px) and (max-width:1999px) {
 
-    /* RICH TEXT PRVA FOTKA */
-
-
-
-    /*
-  .contactwrap, .footersponzorwrap  {
-    border-top: 4px solid #9b2557;
-}
-  .child:nth-child(1) .newname {
-    border-top: 4px solid #9b2557;
-  }
-  
-  .child:nth-last-child(1) .newname {
-    border-bottom: 4px solid #9b2557;
-  }
-  
-  .newswrap:nth-last-child(-n+3) {
-    border-bottom: 4px solid #9b2557;
-  }
-  
-  .claniceminigrid:nth-last-child(-n+3) {
-    border-bottom: 4px solid #9b2557;  
-  }
-
-
-
-
-/*
-  .claniceminigrid, .newsminigrid {
-    border-top: 4px solid #9b2557;  
-  }
-*/
+    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1) {
+      border-top: 4px solid #9b2557;
+    }
+    
+    .child:nth-last-child(1) .newname, .newswrap:nth-last-child(-n+3), .claniceminigrid:nth-last-child(-n+3),
+    .claniceminigrid:nth-last-child(-n+3), .contactwrap:nth-last-child(-n+4), .search-grid-auto:nth-last-child(1)  {
+      border-bottom: 4px solid #9b2557;
+    }
 
 
 /*
@@ -1060,45 +863,19 @@ OVO JE UGAŠENO
     height: 4px;
   }
 
-  /*
-  .child2:nth-child(1) .newname {
-    border-top: 4px solid #9b2557;
-  }
-  .child2:nth-last-child(1) .newname {
-    border-bottom: 4px solid #9b2557;
-  }
-*/
+
 }
   @media (min-width: 2000px) and (max-width:2399px) {
 
 
-
-    /*
-  .contactwrap, .footersponzorwrap {
-    border-top: 5px solid #9b2557;
-}
-  .child:nth-child(1) .newname {
-    border-top: 5px solid #9b2557;
-  }
-  
-  .child:nth-last-child(1) .newname {
-    border-bottom: 5px solid #9b2557;
-  }
-  
-  .newswrap:nth-last-child(-n+3) {
-    border-bottom: 5px solid #9b2557;
-  }
-  
-  .claniceminigrid:nth-last-child(-n+3) {
-    border-bottom: 5px solid #9b2557;  
-  }
-
-
-  /*
-  .claniceminigrid, .newsminigrid {
-    border-top: 5px solid #9b2557;  
-  }
-  */
+    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1) {
+      border-top: 5px solid #9b2557;
+    }
+    
+    .child:nth-last-child(1) .newname, .newswrap:nth-last-child(-n+3), .claniceminigrid:nth-last-child(-n+3),
+    .claniceminigrid:nth-last-child(-n+3), .contactwrap:nth-last-child(-n+4), .search-grid-auto:nth-last-child(1)  {
+      border-bottom: 5px solid #9b2557;
+    }
 
 
 /*  
@@ -1110,51 +887,19 @@ OVO JE UGAŠENO
     height: 5px;
   }
 
-  /*
-  .child2:nth-child(1) .newname {
-    border-top: 5px solid #9b2557;
-  }
-  .child2:nth-last-child(1) .newname {
-    border-bottom: 5px solid #9b2557;
-  }
-*/
+
   }
 
   @media (min-width: 2400px) {
   
-  
-
-
-
-    /*
-  .contactwrap, .footersponzorwrap {
-    border-top: 5px solid #9b2557;
-}
-
-  
-  .child:nth-child(1) .newname {
-    border-top: 5px solid #9b2557;
-  }
-  
-  .child:nth-last-child(1) .newname {
-    border-bottom: 5px solid #9b2557;
-  }
-  
-  .newswrap:nth-last-child(-n+3) {
-    border-bottom: 5px solid #9b2557;
-  }
-  
-  .claniceminigrid:nth-last-child(-n+3) {
-    border-bottom: 5px solid #9b2557;  
-  }
-
-
-
-  /*
-  .claniceminigrid, .newsminigrid {
-    border-top: 5px solid #9b2557;  
-  }
-  */
+    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1) {
+      border-top: 5px solid #9b2557;
+    }
+    
+    .child:nth-last-child(1) .newname, .newswrap:nth-last-child(-n+3), .claniceminigrid:nth-last-child(-n+3),
+    .claniceminigrid:nth-last-child(-n+3), .contactwrap:nth-last-child(-n+4), .search-grid-auto:nth-last-child(1)  {
+      border-bottom: 5px solid #9b2557;
+    }
 
 
   /*
@@ -1166,14 +911,6 @@ OVO JE UGAŠENO
     height: 5px;
   }
 
-  /*
-  .child2:nth-child(1) .newname {
-    border-top: 5px solid #9b2557;
-  }
-  .child2:nth-last-child(1) .newname {
-    border-bottom: 5px solid #9b2557;
-  }
-  */
   }
 
 /*
